<resources>
    <string name="app_name">Survival</string>
    <string name="ammo_found">You found %s ammo</string>
    <string name="title_stuff">Stuff</string>
    <string name="title_locations">Locations</string>
    <string name="title_profile">Profile</string>
    <string name="location_lake_name">West lake</string>
    <string name="location_lake_description">description of the west lake. Free for explore</string>
    <string name="back_dialog_title">Do you want to return to the main menu?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_game">New game</string>
    <string name="continue_game">Continue game</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="begin_game">Begin game</string>
    <string name="saves">Saves</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="empty_save">Empty save</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="survivor">Survivor</string>
    <string name="enter_name">Enter name</string>
    <string name="are_you_sure_to_delete">Are you sure you want to delete this save?</string>
    <string name="save_removed">Save has been deleted</string>
    <string name="loading">Loading…</string>
    <string name="quit">Quit</string>
    <string name="create_new_game_question">Are you want to create new game?</string>
</resources>
